--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,20 @@
   color: #61dafb;
 }
 
+.panel {
+  padding-right: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.jumbotron{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
