--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,11 @@
   align-items: center;
 }
 
+.back-card-title{
+  padding-bottom: 15px;
+  border-bottom: 1px solid #D3D3D3;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
